<resources>
    <string name="app_name">VapeCrib</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_forecast">Forecast</string>
    <string name="menu_products">Products</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_settings">Settings</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="time_period">Time Period</string>
    <string name="period">Period</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="total_sales_products">Total Sales Products</string>
    <string name="total_sales_revenue">Total Sales Revenue</string>
    <string name="total_inventory_value">Total Inventory Value</string>
    <string name="forecast_accuracy">Forecast Accuracy</string>
    <string name="active_alerts">Active Alerts</string>
    <string name="expiring_stocks">Expiring Stocks</string>
    <string name="restock_alerts">Restock Alerts</string>
    <string name="critical_stock">CRITICAL: Stock &lt; 1-day forecast</string>
    <string name="high_stock">HIGH: Stock &lt; 7-day forecast</string>
    <string name="medium_stock">MEDIUM: Stock &lt; 30-day forecast</string>
    <string name="critical_count">Critical: 0</string>
    <string name="high_count">High: 0</string>
    <string name="medium_count">Medium: 0</string>
    <string name="n_a">N/A</string>
    <string name="order_now">Order Now</string>
    <string name="sales_trend_analysis">Sales Trend Analysis</string>
    <string name="monthly_revenue_actual_vs_forecast">Monthly Revenue (Actual vs. Forecast)</string>
    <string name="actual">Actual</string>
    <string name="forecast">Forecast</string>
    <string name="monthly_performance">Monthly Performance</string>
    <string name="monthly_sales_performance">Monthly Sales Performance</string>
    <string name="sales_forecast">Daily Forecast</string>
    <string name="monthly_sales_forecast">Actual vs. Forecast (Units)</string>
    <string name="product">Product</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="load_forecast">Load Forecast</string>
    <string name="all_products_aggregated">All Products (Aggregated)</string>
</resources>
