<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_forecast"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_forecast" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Logout" />
        </menu>
    </item>

</menu>
