<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.vapecrib.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_forecast"
        android:name="com.example.vapecrib.ui.forecast.ForecastFragment"
        android:label="@string/menu_forecast"
        tools:layout="@layout/fragment_forecast" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.vapecrib.ui.products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" />
    <fragment
        android:id="@+id/nav_reports"
        android:name="com.example.vapecrib.ui.reports.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_reports" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.vapecrib.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
